fixed the navbar background not showing right colr

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,4 +1,5 @@
 .NavBar {
+  
   margin: auto;
   padding: 1%;
 
@@ -22,7 +23,7 @@
     font-size: inherit;
     margin-left: 1%;
     margin-right: 1%;
-    background-color: var(--color2);
+    background-color: inherit;
 
 
   }
